--- a/src/template.html
+++ b/src/template.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>rm-06</title>
+    <title>burning-chrome-2021</title>
 </head>
 <body>
 <canvas id="screen">
@@ -15,6 +15,6 @@
 </canvas>
 <div id="out"></div>
 <div id="ui"></div>
-<a class="github" href="https://github.com/fforw/rm-06">github</a>
+<a class="github" href="https://github.com/fforw/burning-chrome-2021">github</a>
 </body>
 </html>
